# farwatch

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install.sh  release-please-config.json
.github/: dependabot.yml
.github/workflows/: audit.yml  fuzz.yml  publish.yml  release-please.yml  release.yml  scorecard.yml  security.yml  verify.yml
Formula/: farwatch.rb
crates/cli/: Cargo.toml
crates/cli/src/: account.rs  ai_tools.rs  attach.rs  common.rs  config.rs  constants.rs  host.rs  main.rs  opencode_adapter.rs  pty.rs  relay_client.rs  state.rs  tui.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: crypto.rs  lib.rs  pairing.rs  protocol.rs
crates/protocol/tests/: generate_test_vectors.rs
crates/relay/: Cargo.toml
crates/relay/src/: auth.rs  main.rs  relay.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: decode_peer_frame.rs  decode_relay.rs  decode_secure_message.rs  parse_pairing_uri.rs
fuzz/seeds/parse_pairing_uri/: with_fingerprint.txt  without_fingerprint.txt
