[workspace]
members = [
    "crates/protocol",
    "crates/relay",
    "crates/cli",
]
# fuzz/ is a standalone workspace (see fuzz/Cargo.toml) so its nightly +
# libfuzzer-sys toolchain never infects normal `cargo check`/`test`/`build`.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["Jun Kai Yip"]
repository = "https://github.com/yipjunkai/farwatch"
homepage = "https://farwatch.dev"

[workspace.lints.rust]
unsafe_code = "forbid"
